@@ -24,6 +24,7 @@
 #include <cerrno>
 #include <cstring>
 #include "cmdline.h"
+#include "verbose.h"
 
 extern gengetopt_args_info args_info;
 
@@ -34,7 +35,7 @@ extern gengetopt_args_info args_info;
  \note use this function rather sparsely in order not to spam the output
 */
 void message(const char* format, ...) {
-    fprintf(stderr, "%s: ", PACKAGE);
+    fprintf(stderr, "%s%s%s: ", _cm, PACKAGE, _c_);
 
     va_list args;
     va_start(args, format);
@@ -53,7 +54,7 @@ void status(const char* format, ...) {
         return;
     }
 
-    fprintf(stderr, "%s: ", PACKAGE);
+    fprintf(stderr, "%s%s%s: ", _cm, PACKAGE, _c_);
 
     va_list args;
     va_start(args, format);
@@ -71,14 +72,14 @@ void status(const char* format, ...) {
  \note The codes should be documented in the manual.
 */
 __attribute__((noreturn)) void abort(unsigned short code, const char* format, ...) {
-    fprintf(stderr, "%s: ", PACKAGE);
+    fprintf(stderr, "%s%s%s: %s", _cm, PACKAGE, _c_, _c0);
 
     va_list args;
     va_start(args, format);
     vfprintf(stderr, format, args);
     va_end(args);
 
-    fprintf(stderr, " -- aborting [#%02d]\n", code);
+    fprintf(stderr, "%s -- %saborting [#%02d]%s\n", _c_, _cR, code, _c_);
 
     status("see manual for a documentation of this error");
 
