@@ -19,6 +19,8 @@ Version 2.4-unreleased
 
 * removed explicit `std::flush' calls
 
+* colored status messages
+
 Version 2.3 (21 October 2009)
 =============================
 
